; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/local/extr_10072.c_setup_ssl_ctx.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/local/extr_10072.c_setup_ssl_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"setup_ssl_ctx:SSL_CTX_new\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setup_ssl_ctx(i32** %0) #0 {
  %2 = alloca i32**, align 8
  store i32** %0, i32*** %2, align 8
  %3 = call i32 (...) @OpenSSL_add_ssl_algorithms()
  %4 = call i32 (...) @SSL_load_error_strings()
  %5 = call i32 (...) @SSLv3_client_method()
  %6 = call i32* @SSL_CTX_new(i32 %5)
  %7 = load i32**, i32*** %2, align 8
  store i32* %6, i32** %7, align 8
  %8 = load i32**, i32*** %2, align 8
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %13, label %11

11:                                               ; preds = %1
  %12 = call i32 @fail(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @OpenSSL_add_ssl_algorithms(...) #1

declare dso_local i32 @SSL_load_error_strings(...) #1

declare dso_local i32* @SSL_CTX_new(i32) #1

declare dso_local i32 @SSLv3_client_method(...) #1

declare dso_local i32 @fail(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
